# ersem

./: .gitignore  .readthedocs.yml  .zenodo.json  CMakeLists.txt  Makefile  README  README.md  bacteria.F90  bacteria_docdyn.F90  base.F90  benthic_bacteria.F90  benthic_base.F90  benthic_column.F90  benthic_column_dissolved_matter.F90  benthic_column_particulate_matter.F90  benthic_fauna.F90  benthic_nitrogen_cycle.F90  benthic_nutrients.F90  benthic_pom.F90  benthic_pom_profile.F90  calcification.F90  carbonate.F90  dom.F90  ersem_model_library.F90  gas_dynamics.F90  light.F90  light_iop.F90  mesozoo.F90  mesozooplankton.F90  microzoo.F90  microzooplankton.F90  nitrification.F90  nutrients.F90  oxygen.F90  pelagic_base.F90  pom.F90  primary_producer.F90  pyproject.toml  shared.F90  vphyt.F90  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ersem.yml
conda.recipe/: build.sh  meta.yaml
docs/: requirements.txt
docs/source/: acknowledgements.rst  api.rst  build.rst  concept.rst  conf.py  index.rst  license.rst  ref.bib  references.rst  support.rst  troubleshooting.rst  tutorials.rst  workflow.rst
github-actions/: fabm-ersem-build.sh  fabm0d-gotm-ersem-build.sh  fabm0d-gotm-ersem.sh  gotm-fabm-ersem-build.sh  pyfabm-ersem-build.sh  pyfabm-tut.py  regen_expected_results.py
github-actions/fabm0d-gotm-ersem/: aquarium-tut-config-setup.sh  aquarium-tut.py  aquarium_tut.py  expected.json  expected.txt  fabm0d-gotm-ersem-build.sh  fabm0d-gotm-ersem-dep-debian.sh  test_aquarium.py
github-actions/gotm-fabm-ersem/: expected.json  expected.txt  expected_state.json  gotm-fabm-ersem-build.sh  gotm-fabm-ersem-dep-debian.sh  gotm-profiling.sh  gotm-tut-config-setup.sh  gotm-tut.py  gotm_tut.py  gprof.csv  regen_expected_results.py  regen_state_var_expected.py  test_gotm.py  test_profiling.py  (+1 more)
src/: CMakeLists.txt  TDOC.F90  apply_move.F90  bacteria.F90  bacteria_docdyn.F90  benthic_bacteria.F90  benthic_base.F90  benthic_calcite.F90  benthic_carbonate.F90  benthic_column.F90  benthic_column_dissolved_matter.F90  benthic_column_particulate_matter.F90  benthic_erosion.F90  benthic_fauna.F90  benthic_nitrogen_cycle.F90  calcification.F90  carbonate.F90  conservative_migrator.F90  dvm_move.F90  dvm_upper_lower_boundaries.F90  dvm_upper_lower_boundaries_simple.F90  dvm_weight_distribution.F90  ersem_model_library.F90  fluff.F90  get_dependencies.F90  light.F90  light_iop.F90  light_iop_ady.F90  mesozooplankton.F90  methane.F90  microzooplankton.F90  migration_move.F90  migration_vertical_distribution.F90  migration_weight_distribution.F90  move.F90  nitrification.F90  nitrous_oxide.F90  oxygen.F90  pelagic_base.F90  primary_producer.F90  (+7 more)
testcases/: fabm-ersem-15.06-L4-ben-docdyn-iop-denit.yaml  fabm-ersem-15.06-L4-ben-docdyn-iop-methane.yaml  fabm-ersem-15.06-L4-ben-docdyn-iop-n2o.yaml  fabm-ersem-15.06-L4-ben-docdyn-iop.yaml  fabm-ersem-15.06-L4-noben-docdyn-iop.yaml  fabm-ersem-26.02-dvm-n2o.yaml  fabm-ersem-26.02-dvm.yaml  fabm-ersem-Blackford2004-L4-ben-stdbac-stdlight.yaml  fabm-ersem-Blackford2004-L4-noben-stdbac-stdlight.yaml  fabm-ersem-L4-benthos.yaml  fabm-ersem-L4.yaml  fabm-ersem-locate-arctic.yaml  fabm-ersem-template.yaml  fabm-ersem.yaml.template  fabm-neccton-combined.yaml  fabm-nemo-ages-tdoc.yaml  fabm-spectral-combined.yaml  fabm_tDOC.yaml  import_legacy_setup.py  update.py
(+34 files in other folders)
